--- a/estadia-ja-frontend/package.json
+++ b/estadia-ja-frontend/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.13.1",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
