--- a/estadia-ja-frontend/package.json
+++ b/estadia-ja-frontend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check"
   },
   "dependencies": {
     "axios": "^1.13.1",
@@ -23,8 +26,11 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.19",
+    "eslint-config-prettier": "^10.1.8",
     "globals": "^16.4.0",
     "postcss": "^8.4.40",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^3.4.7",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
