--- a/estadia-ja-frontend/package.json
+++ b/estadia-ja-frontend/package.json
@@ -27,6 +27,8 @@
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.4.0",
     "postcss": "^8.4.40",
     "prettier": "^3.6.2",
