--- a/estadia-ja-frontend/docker-compose.yml
+++ b/estadia-ja-frontend/docker-compose.yml
@@ -1,11 +1,11 @@
-version: "3.8"
+version: '3.8'
 
 services:
   frontend:
     build: .
-    container_name: frontend_app 
+    container_name: frontend_app
     ports:
-      - "5173:5173" 
+      - '5173:5173'
     volumes:
       - .:/app
       - /app/node_modules
